@@ -1,0 +1,6 @@
+OBJS=cygloader.o
+all: $(OBJS)
+$(OBJS) : %.o: %.c
+	$(CC) $< -o asterisk.exe
+clean:
+	rm -f asterisk.exe
